fix(pdsls): add more missing colour variables

--- a/styles/pdsls/catppuccin.user.less
+++ b/styles/pdsls/catppuccin.user.less
@@ -34,13 +34,24 @@
     --color-red-400: @red;
     --color-green-300: @green;
     --color-green-400: @green;
+    --color-green-900: mix(@green, @base, 40%);
     --color-emerald-400: @green;
     --color-blue-400: @accent;
     --color-blue-500: @accent;
-    --color-indigo-400: @accent;
-    --color-indigo-300: fade(@accent, 85%);
+    --color-blue-300: @blue;
+    // array values (dark mode)
+    --color-violet-300: @accent;
+    --color-violet-400: fade(@accent, 70%);
+    // array values (light mode)
+    --color-violet-500: fade(@accent, 70%);
+    --color-violet-700: @accent;
+    // json keys (dark mode)
+    --color-indigo-400: fade(@accent, 70%);
+    --color-indigo-300: @accent;
+    // json keys (light mode)
+    --color-indigo-500: fade(@accent, 70%);
+    --color-indigo-700: @accent;
 
-    --color-white: @text;
 
     --color-dark-100: @surface0;
     --color-dark-200: @surface0;
@@ -54,7 +65,9 @@
       --color-neutral-300: @subtext1;
       --color-neutral-600: @surface1;
       --color-neutral-700: @surface1;
+      --color-neutral-800: mix(@surface0, @base, 30%);
       --color-neutral-900: @base;
+      --color-white: @text;
     }
 
     & when (@flavor =latte) {
@@ -63,13 +76,14 @@
       --color-neutral-300: @surface2;
       --color-neutral-600: @subtext1;
       --color-neutral-700: @text;
+      --color-neutral-800: @subtext1;
       --color-neutral-900: @text;
+      --color-white: @base;
     }
 
     --color-neutral-50: @base;
     --color-neutral-400: @subtext0;
     --color-neutral-500: @subtext0;
-    --color-neutral-800: mix(@surface0, @base, 30%);
 
     background-color: @base;
 
